# Poetry-Template-Service

./: .dockerignore  .env  .gitignore  Dockerfile  FINAL_SECURITY_SUMMARY.md  Makefile  README.md  SECURITY.md  config.py  daemon.json  docker-compose.yml  docker_connectivity_check.sh  docker_vulnerability_scanner.sh  gunicorn_conf.py  healthcheck.sh  main.py  pyproject.toml  run.py  run_tests.py  run_tests.sh  scan-image.sh  security-scan.sh
.docker/: config.json
app/: __init__.py  main.py
app/api/: __init__.py  router.py
app/api/endpoints/: __init__.py  health.py  root.py
app/api/middleware/: __init__.py  security.py
app/core/: __init__.py  config.py  health.py
app/models/: __init__.py  basic.py
app/utils/: exceptions.py  logging.py
docs/: README.md  api_documentation.md  code_examples.md  docker_security.md  installation.md  security.md  technical_design.md
kubernetes/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml  validate-config.sh
secrets/: api_key.txt  db_password.txt
tests/: conftest.py
tests/unit/: test_exceptions.py  test_health.py  test_main.py  test_root.py
