[tool.poetry]
name = "hello-world-api"
version = "1.0.0"
description = "A production-ready FastAPI Hello World API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-multipart = "^0.0.9"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"