[tool.poetry]
name = "hello-world-api"
version = "1.0.0"
description = "A production-ready FastAPI Hello World API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-multipart = "^0.0.18"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
slowapi = "^0.1.9"
psutil = "^5.9.8"
gunicorn = "^22.0.0"
pydantic-settings = "^2.8.1"
pytest-asyncio = "^0.25.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "run:start"
dev = "app.main:start"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"